assets/css/v2/triptych/simulation.scss
.simulation-screen-centering-container {
  display: flex;
  justify-content: center;
  background: #3d5366;
}

.simulation-screen-scrolling-container {
  scrollbar-color: #607180 #2e3f4d;

  &::-webkit-scrollbar {
    width: 12px;
  }
  &::-webkit-scrollbar-thumb {
    background-color: #607180;
    border-radius: 12px;
    border: 2px solid #2e3f4d;
  }
  &::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 12px;
    background-color: #2e3f4d;
  }
}

.simulation-screen-scrolling-container {
  display: flex;
  overflow-y: hidden;
  overflow-x: auto;
  padding-bottom: 20px;

  .three-flex-panes {
    height: 344px;
    width: 580.5px;
    z-index: 999;
    display: flex;
    justify-content: flex-start;

    .left-pane,
    .middle-pane,
    .right-pane {
      position: relative;
      height: 100%;
      width: 33.33%;

      .evergreen-content-image__container,
      .evergreen-content-image__image {
        width: 1080px;
        height: 1920px;
      }

      & > * {
        transform-origin: top left;
        transform: scale(17.92%);
      }

      .evergreen-content__identifiers {
        transform-origin: bottom right;
      }
    }
  }

  .full-screen {
    height: 344px;
    width: 580.5px;
    z-index: 999;

    .crowding-widget {
      height: 1920px;
      width: 3240px;
    }

    & > * {
      transform-origin: top left;
      transform: scale(17.92%);
    }
  }
}

